--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ section {
   padding: 3% 15% 4%;
 }
 
-/*CLASSES BEGIN*/
+/*title*/
 .head {
   font-family: "Montserrat", sans-serif;
   font-weight: 900;
@@ -86,6 +86,18 @@ section {
   font-size: 2.5rem;
   text-align: center;
 }
+
+.topics .card {
+  height: 225px;
+}
+
+/* #img1 {
+  flex-shrink: 80%;
+}
+@media (max-width: 750px) {
+  .topics .card {
+  }
+} */
 
 /*Download buttons*/
 
