--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ section {
 
 .navbar-brand {
   font-family: "Ubuntu";
-  font-size: 2.5rem;
+  font-size: 3.5rem;
   font-weight: bold;
   margin-left: 0;
 }
@@ -112,7 +112,7 @@ section {
 }
 
 .fa-solid {
-  color: #ef8172;
+  color: #537fe7;
   font-size: 500%;
 }
 
@@ -121,7 +121,7 @@ section {
 }
 
 .fa-solid:hover {
-  color: #ff4c68;
+  color: #406fdd;
 }
 
 .text {
@@ -135,42 +135,80 @@ section {
   text-align: center;
 }
 
-/*Testimonial section*/
-
-.testimonial-image {
-  width: 10%;
-  border-radius: 100%;
+/* sponser*/
+#sponser h2 {
+  font-weight: 600;
+  margin-bottom: 6%;
+}
+#sponser .partners {
+  margin: 1rem 2.5rem;
 }
 
-.partners {
-  width: 15%;
-  margin: 20px 20px 50px;
+/*Footer*/
+footer {
+  padding: 3% 15% 4%;
+}
+.context-dark,
+.bg-gray-dark,
+.bg-primary {
+  color: rgba(0, 0, 0, 0.8);
 }
 
-.carousel-item {
-  padding: 7% 15%;
+.footer-classic a,
+.footer-classic a:focus,
+.footer-classic a:active {
+  color: black;
+}
+.nav-list li {
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
-.h2 {
-  font-family: "Montserrat";
-  font-weight: 900;
-  text-align: center;
+.nav-list li a:hover:before {
+  margin-left: 0;
+  opacity: 1;
+  visibility: visible;
 }
 
-.p {
-  font-weight: 400;
-  color: grey;
-  text-align: center;
+ul,
+ol {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
-.card-title {
-  font-family: "Montserrat";
+.social-inner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  padding: 23px;
+  font: 900 13px/1 "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, sans-serif;
+  text-transform: uppercase;
+  color: rgba(255, 255, 255, 0.5);
+}
+.social-container .col {
+  border: 1px solid rgba(255, 255, 255, 0.1);
+}
+.nav-list li a:before {
+  content: "\f14f";
+  font: 400 21px/1 "Material Design Icons";
+  color: #4d6de6;
+  display: inline-block;
+  vertical-align: baseline;
+  margin-left: -28px;
+  margin-right: 7px;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.22s ease;
 }
 
-.pricing-column {
-  padding: 3% 2%;
+/*link self*/
+#linkSelf {
+  background-color: #4d6de6;
+  padding: 0.25rem;
 }
-
 .last {
   padding: 100px 30px 50px;
   position: absolute;
@@ -196,18 +234,6 @@ section {
   margin: 20px 10px;
 }
 
-@media (max-width: 750px) {
-  .copyright {
-    position: relative;
-    left: 5px;
-  }
-
-  .last {
-    position: relative;
-    left: 30%;
-  }
-}
-
 /* IDS BEGIN*/
 
 #features {
@@ -220,26 +246,15 @@ section {
   background-color: #fff;
 }
 
-#testimonials {
-  padding: 7% 15%;
-  text-align: center;
-  background-color: #ef8172;
-  color: #fff;
-}
-
-#press {
-  background-color: #ef8172;
+#sponser {
+  background-color: white;
   text-align: center;
   padding: 3%;
 }
 
-#pricing {
-  padding: 100px 100px 100px;
-}
-
-#Footer {
-  background-color: #ff4c68;
-  text-align: center;
+#download {
+  background-color: #537fe7;
   color: #fff;
-  padding: 140px 50px 80px;
+  text-align: center;
+  padding: 3% 15% 4%;
 }
