Page link in place

--- a/components/IndroductionToBlockchainTechnology.html
+++ b/components/IndroductionToBlockchainTechnology.html
@@ -32,13 +32,13 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="#dashBoard">DashBoard </a>
+                        <a class="nav-link" href="../index.html#dashBoard">DashBoard </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#linkSelf">Contacts </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#download">Download </a>
+                        <a class="nav-link" href="../index.html#download">Download </a>
                     </li>
                 </ul>
             </div>
@@ -228,7 +228,6 @@
             </li>
         </ol>
     </section>
-
     <section>
         <h2>Blockchain applications:</h2>
         <p>Blockchain technology has several potential applications beyond cryptocurrency. Here are some examples:</p>
@@ -294,7 +293,6 @@
         <p>These are just a few examples of the potential applications of blockchain technology. As the technology
             continues to develop, it is likely that we will see even more innovative and useful applications emerge.</p>
     </section>
-
     <section class="darkB">
         <h2>Challenges and limitations:</h2>
         <p>Blockchain technology has the potential to revolutionize the way we conduct transactions and manage data.
@@ -422,7 +420,6 @@
             slow down the adoption of blockchain in certain industries. However, as the technology continues to evolve
             and mature, its impact on various industries is expected to grow.</p>
     </section>
-
     <section class="darkB">
         <h2>Glossary of blockchain terms:</h2>
         <p>Blockchain technology has introduced many new terms and concepts that are unique to this field. It can be
